# tekt-cargo-dsm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  crystalline.toml  projeto-lente-blast-radius.md
00_nucleo/: MANIFESTO.pt.md  crystalline-dsm-estudo-previo.md  crystalline-dsm-roadmap.md
00_nucleo/adr/: 0001-fonte-do-grafo-fork-externo.md  0002-modelagem-do-grafo.md  0003-workspace-cargo.md  0004-resolucao-colisoes-path.md  0005-validacao-pos-medicao.md  0006-nomeacao-trait-padrao.md  adr-0001-criacao-ferramenta.md  adr-0002-tratamento-cfg.md  adr-0003-tratamento-path.md  adr-0004-granularidade-no.md  adr-0005-petgraph-em-l1.md  adr-0006-nos-fantasma-externos.md  adr-0007-extensao-entry-kind.md  adr-0008-entry-style-propagado.md  adr-0009-serializacao-l3.md  adr-0010-trees-json-e-variantes-explicitas.md
00_nucleo/lessons/: 0001-dados-grafo.md  0002-calculo-raio.md  0003-adaptador-l3.md  0004-lente-investiga.md  0006-id-no-core-infra.md  0008-correcao-chave-aresta.md  0010-lente-resolve.md  0012-descritor-semantico.md  0013-infra-descritor.md  0014-investiga-trait-no.md  0015-resolve-trait-no.md  0016-verifica-raio-grafo-resolvido.md  0017-l3-invocador-fork.md  0018-consolidar-invocador.md  0019-l4-wiring.md  0020-l2-cli.md  0021-medicao-egui.md  0022-l3-invocador-bin-lib.md  0023-l3-deteccao-alvo-metadata.md  0024-l3-diretorio-inexistente-diagnostico.md  0025-l1-filtro-stdlib.md  0026-l1-comentario-crate-name.md  0027-ranking-top-n.md  0028-reconciliar-spec-forma.md  0029-proto-ui-arena.md  0030-escopo-usuario.md  0031-estrutura-modulo-ciclos.md  0032-medicao-ciclos-raiz.md  0033-medicao-ciclos-referencia.md  0034-modo-uses-estrutura.md  0035-ordenamento-dsm.md  0036-proto-dsm-tela.md  0037-position_no_core_infra.md  0038-proto-impacto-diff.md  0039-proto-impacto-diff-multicrate.md  0040-proto-impacto-diff-cache.md  0041-proto-impacto-diff-colisoes.md  0042-resolve-escada-trait-ref.md  0043-arena_untracked_validacao.md  0044-infra_cache_e_membros.md  (+34 more)
00_nucleo/prompt/: 0001-dados_grafo.md  0002-calculo_raio.md  0003-adaptador_l3.md  0004-lente_investiga.md  0005-medicao_colisoes.md  0006-id_no_core_infra.md  0007-remedicao_colisoes.md  0019-l4-wiring.md  (+70 more)
01_core/: Cargo.toml
01_core/comparacao/: Cargo.toml
01_core/comparacao/src/: lib.rs
01_core/filtro/: Cargo.toml
01_core/filtro/src/: lib.rs
01_core/filtro/tests/: e2e_lente_core.rs
02_shell/: Cargo.toml
02_shell/cli/: Cargo.toml
02_shell/cli/src/: args.rs  dsm_template.html  erro.rs  lib.rs  main.rs  saida.rs
03_infra/: Cargo.toml
03_infra/src/: cargo_metadata_reader.rs  crystalline_config_reader.rs  diff.rs  dto.rs  fork.rs  html_renderer.rs  import_extractor.rs  invocacao.rs  json_serializer.rs  lib.rs  metadata.rs  module_traverser.rs  sarif_reader.rs  traducao.rs  trees_serializer.rs  workspace.rs
03_infra/src/html_renderer/: script.js  style.css
03_infra/tests/: cargo_metadata_reader_tests.rs  import_extractor_tests.rs  module_traverser_tests.rs
03_infra/tests/fixtures/crate-amostra/: Cargo.toml
03_infra/tests/fixtures/crate-amostra/src/: lib.rs  parser.rs  runner.rs
04_wiring/: Cargo.toml
04_wiring/app/: Cargo.toml
04_wiring/app/src/: erro.rs  main.rs
04_wiring/mcp/: Cargo.toml
04_wiring/mcp/src/: main.rs
04_wiring/mcp/tests/: e2e_stdio.rs
04_wiring/src/: graph_builder.rs  lib.rs  main.rs
04_wiring/tests/: graph_builder_integration_tests.rs  integration_tests.rs  typst_smoke_test.rs
04_wiring/tests/fixtures/empty-workspace/: Cargo.toml
04_wiring/tests/fixtures/empty-workspace/src/: lib.rs
05_investiga/: Cargo.toml
06_resolve/: Cargo.toml
07_filtro/: Cargo.toml
08_ranking/: Cargo.toml
09_estrutura/: Cargo.toml
docs/: estudo-previo.md  graph-schema-v1.md  proposta-lente.md  trees-schema-v1.md
lab/medicao-chave-item/: Cargo.toml  relatorio.md
lab/medicao-chave-item/src/: main.rs
lab/medicao-ciclos-egui/: Cargo.toml  relatorio.md
lab/medicao-ciclos-egui/dados/: estrutura-egui-completo.json  estrutura-egui-seu-codigo.json  estrutura-lente-core.json
lab/medicao-ciclos-egui/src/: main.rs
lab/medicao-ciclos-referencia/: Cargo.toml  relatorio.md
lab/medicao-ciclos-referencia/dados/: export-egui.json  export-lente-core.json
lab/medicao-ciclos-referencia/src/: main.rs
lab/medicao-colisoes/remedicao/: Cargo.toml  analise-com-bug.json  analise.json  relatorio.md
lab/medicao-colisoes/remedicao/json/: typst-bundle.json  typst-cli.json  typst-eval.json  typst-html.json  typst-ide.json  typst-kit.json  typst-layout.json  typst-macros.json  typst-pdf.json  typst-realize.json  typst-render.json  typst-svg.json  typst-syntax.json  typst-timing.json  typst-utils.json  typst.json
lab/medicao-colisoes/remedicao/src/: main.rs
lab/medicao-egui/: Cargo.toml  dados.json  relatorio.md
lab/medicao-egui/checkpoints/: ecolor.json  egui-wgpu.json  egui-winit.json  egui.json  egui_demo_app.json  egui_demo_lib.json  egui_extras.json  egui_glow.json  egui_kittest.json  emath.json  epaint.json  epaint_default_fonts.json
lab/medicao-egui/src/: main.rs
lab/proto-impacto-diff/: Cargo.toml  index.html  relatorio.md
lab/proto-impacto-diff/cache/: lente_catalogo.hash  lente_catalogo.json  lente_cli.hash  lente_cli.json  lente_core.hash  lente_core.json  lente_estrutura.hash  lente_estrutura.json  lente_filtro.hash  lente_filtro.json  lente_infra.hash  lente_infra.json  lente_investiga.hash  lente_investiga.json  lente_ranking.hash  lente_ranking.json  lente_resolve.hash  lente_resolve.json  lente_wiring.hash  lente_wiring.json
lab/proto-impacto-diff/dados/: cache-cold.json  cache-morno1.json  cache-morno3.json  cache-quente.json  cache-renomeacao.json  colisoes-antes-depois-from.json  colisoes-antes-depois.json  colisoes-cold-sem-resolver.json  colisoes-cold.json  colisoes-pos-0042.json  colisoes-quente-resolver.json  colisoes-quente-sem-resolver.json  colisoes-renomeacao.json  impacto-ambos.json  impacto-git.json  impacto-multi-ambos.json  impacto-stdin.json  untracked-baseline.json  untracked-ligado.json  untracked-solto.json
lab/proto-impacto-diff/src/: main.rs
(+213 files in other folders)
