[package]
name = "lente_wiring"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
lente_core = { path = "../01_core" }
lente_infra = { path = "../03_infra" }
lente_investiga = { path = "../05_investiga" }
lente_resolve = { path = "../06_resolve" }
