[package]
name = "lente_wiring"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
lente_core = { path = "../01_core/core" }
lente_infra = { path = "../03_infra" }
lente_investiga = { path = "../01_core/investiga" }
lente_resolve = { path = "../01_core/resolve" }
lente_filtro = { path = "../01_core/filtro" }
lente_ranking = { path = "../01_core/ranking" }
lente_estrutura = { path = "../01_core/estrutura" }
lente_comparacao = { path = "../01_core/comparacao" }
