[package]
name = "lente_cli"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
publish = false

# Biblioteca de apresentação pura (Estágio 3, 0057): sem [[bin]] — o binário
# "lente" vive em `lente_app` (04_wiring/app, L4). A CLI não importa mais L4.

[dependencies]
# L1 — os tipos sobre os quais os formatadores operam.
lente_core = { path = "../../01_core/core" }
lente_ranking = { path = "../../01_core/ranking" }
lente_estrutura = { path = "../../01_core/estrutura" }
lente_comparacao = { path = "../../01_core/comparacao" }
lente_catalogo = { path = "../catalogo" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
