# [workspace] vazio: isolado do workspace pai (padrão dos labs).
[workspace]

[package]
name = "medicao_ciclos_egui"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
publish = false

[[bin]]
name = "medicao-ciclos-egui"
path = "src/main.rs"

[dependencies]
lente_core = { path = "../../01_core/core" }
lente_estrutura = { path = "../../01_core/estrutura" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
