# [workspace] vazio: isolado do workspace pai (padrão dos labs).
[workspace]

[package]
name = "medicao_egui"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
publish = false

[[bin]]
name = "medicao-egui"
path = "src/main.rs"

[dependencies]
lente_core = { path = "../../01_core" }
lente_infra = { path = "../../03_infra" }
lente_investiga = { path = "../../05_investiga" }
lente_resolve = { path = "../../06_resolve" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
