# [workspace] vazio: isola este crate-de-laboratório do workspace pai.
[workspace]

[package]
name = "remedicao"
version = "0.0.0"
edition = "2024"
rust-version = "1.91"
publish = false

[[bin]]
name = "remedicao"
path = "src/main.rs"

[dependencies]
lente_core = { path = "../../../01_core" }
lente_investiga = { path = "../../../05_investiga" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
